alignment fixes in RTL licensed dashboard *prakash

--- a/hybris-sagia/hybris/bin/custom/sagia/sagiastorefront/web/webroot/WEB-INF/_ui-src/responsive/themes/alpha/less/eservices/dashboard-ar.less
+++ b/hybris-sagia/hybris/bin/custom/sagia/sagiastorefront/web/webroot/WEB-INF/_ui-src/responsive/themes/alpha/less/eservices/dashboard-ar.less
@@ -141,6 +141,15 @@
          .page-dashboard-without-license .licenseSimulatorPopup .modal-content .modal-body{
              padding: 0 20px 20px !important;
          }
+        .ft-logo{
+            float: right !important;
+            position: absolute;
+            text-align: right;
+        }
+    
+        .dashboardUser-col-alignment{
+            padding-right: 20px;
+        }
     }
     @media screen and (min-width: 768px) and (max-width: 1024px) {
         .line-after::after{
