--- a/hybris-sagia/hybris/bin/custom/sagia/sagiastorefront/web/webroot/WEB-INF/_ui-src/responsive/themes/alpha/less/eservices/dashboardresponsive.less
+++ b/hybris-sagia/hybris/bin/custom/sagia/sagiastorefront/web/webroot/WEB-INF/_ui-src/responsive/themes/alpha/less/eservices/dashboardresponsive.less
@@ -595,7 +595,10 @@
 
 
 	[dir=rtl] .page-dashboard .user-icons-block{
-		margin-right: -50px;
+		margin-right: -35px;
+	}
+	.page-dashboard .newsAndUpdateContainer .d-news-update-content{
+		height: 100px;
 	}
 }
 
