--- a/hybris-sagia/hybris/bin/custom/sagia/sagiastorefront/web/webroot/WEB-INF/_ui-src/responsive/themes/alpha/less/eservices/headerFooter.less
+++ b/hybris-sagia/hybris/bin/custom/sagia/sagiastorefront/web/webroot/WEB-INF/_ui-src/responsive/themes/alpha/less/eservices/headerFooter.less
@@ -561,7 +561,6 @@
     [dir=ltr] .ft-logo {
 		left: 10%;
 		right: 0;
-		left: 0;
 	}
 	.footer .my-login-part {
 		position: absolute;
